CT-999 Fix button spacing (QA)

--- a/app/assets/stylesheets/moj/_buttons.scss
+++ b/app/assets/stylesheets/moj/_buttons.scss
@@ -14,6 +14,7 @@
 
   .button {
     margin-right: $gutter;
+    margin-top: $gutter;
   }
 }
 .button-left-spacing{
